[tool.poetry]
name = "sse-example"
version = "0.1.0"
description = ""
authors = ["Joshua Massover <massover@simplebet.io>"]

[tool.poetry.dependencies]
python = "^3.7"
django = {git = "https://github.com/django/django.git", branch = "master"}
asgi-runserver = "^0.1.3"
gunicorn = "^20.0.4"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
